Fixed info paragraph spacing

--- a/screen.css
+++ b/screen.css
@@ -18,7 +18,7 @@ h2{
 }
 
 h3{
- padding 8px;
+ padding: 8px;
 }
 
 img {
